add_custom_target(Wille)
set_target_properties(Wille PROPERTIES FOLDER Examples)

macro(add_wille_chapter name)
  add_dependencies(Wille ${name})
  add_llvm_example(${name} ${ARGN})
endmacro(add_wille_chapter name)

add_subdirectory(Ch1)
#add_subdirectory(Ch2)
#add_subdirectory(Ch3)
#add_subdirectory(Ch4)
#add_subdirectory(Ch5)
#add_subdirectory(Ch6)
#add_subdirectory(Ch7)
